# android-3dmodel-renderer

./: .gitignore  CONTRIBUTING.md  LICENSE  readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/drawgestures/learnopengl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cube.glb
app/src/main/assets/ceres/: license.txt  scene.gltf
app/src/main/assets/low_poly_environment/: scene.gltf
app/src/main/assets/megatron__transformers_dotm/: .gitignore
app/src/main/assets/model/: license.txt  scene.gltf
app/src/main/assets/soul_stealer_bard_fan_art/: license.txt  scene.gltf
app/src/main/assets/stage/: license.txt  scene.gltf
app/src/main/assets/stylized_sports_car_360/: license.txt  scene.gltf
app/src/main/assets/test_2/: license.txt  scene.gltf
app/src/main/assets/test_models/: untitled.gltf  untitled.mtl
app/src/main/cpp/: CMakeLists.txt  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureAsset.cpp  TextureAsset.h  Utility.cpp  Utility.h  main.cpp  utils.h
app/src/main/cpp/AndroidJNI/: CMakeLists.txt  build-android.sh
app/src/main/cpp/AndroidJNI/build-android/: CMakeCache.txt  Makefile  cmake_install.cmake
app/src/main/cpp/camera/: Camera.cpp  Camera.h
app/src/main/cpp/core/: Behaviour.cpp  Behaviour.h  Component.cpp  Component.h  Scene.cpp  Scene.h
app/src/main/cpp/game/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
app/src/main/cpp/importer/: ModelImporter.cpp  ModelImporter.h
app/src/main/cpp/light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
app/src/main/cpp/math/: mat4f.cpp  mat4f.h  math.h  quaternion.cpp  quaternion.h  vector3.cpp  vector3.h
app/src/main/cpp/mesh/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Shader.cpp  Shader.h
app/src/main/cpp/mesh/primitives/: Cube.cpp  Cube.h  Sphere.cpp  Sphere.h
app/src/main/cpp/mesh/shader/: Shader.cpp  Shader.h
app/src/main/cpp/shader/: Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  Shaders.h.in  frag.frag  shaders.cmake  vert.vert
app/src/main/cpp/shaders/: BaseLitShader.cpp  base_lit.frag  base_lit.vert
app/src/main/cpp/transform/: Transform.cpp  Transform.h
app/src/main/cpp/unused/: ShaderBase.cpp  ShaderBase.h
app/src/main/cpp/utils/: logger.h
app/src/main/java/com/drawgestures/learnopengl/: MainActivity.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/drawgestures/learnopengl/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
